# tinyplaylists

./: .gitignore  README.md  license.txt  pyproject.toml
.github/workflows/: actions.yml
docs/: conf.py  index.rst
docs/tinyplaylists/: tinyplaylists.main.rst  tinyplaylists.playlist.rst  tinyplaylists.rst  tinyplaylists.track.rst
tests/: test_tinyplaylists.py
tinyplaylists/: main.py  playlist.py  track.py
