[tool.poetry]
name = "tinyplaylists"
version = "0.1.0"
description = "A tiny library to organize audio files"
authors = ["platers <platers81@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
